test/domains/compilerErrors/notsupportedOrderIndex-ok.chpl
use notsupportedCommon;

writeln(dfltRectangularBase.orderToIndex(0));
//writeln(dfltAssociativeBase.orderToIndex(0));
writeln(DistributedBase.orderToIndex(0));
writeln(dfltRectangularSubdomain.orderToIndex(0));
//writeln(dfltAssociativeSubdomain.orderToIndex(0));
writeln(DistributedSubdomain.orderToIndex(0));
//writeln(dfltRectangularSparseSub.orderToIndex(0));
//writeln(dfltAssociativeSparseSub.orderToIndex(0));
//writeln(DistributedSparseSub.orderToIndex(0));
